--- a/db_ex_connections/zonda/history.txt
+++ b/db_ex_connections/zonda/history.txt
@@ -1,153 +1,15 @@
-obukowski started zonda_trades.py on 03/14/22 05:33:04 
-obukowski started zonda_ob.py on 03/14/22 05:33:10 
-obukowski stoppped zonda_ob.py on 03/14/22 06:07:05 
-obukowski stoppped zonda_trades.py on 03/14/22 06:07:05 
-obukowski started zonda_ob.py on 03/14/22 06:07:05 
-obukowski started zonda_trades.py on 03/14/22 06:07:05 
-obukowski stoppped zonda_ob.py on 03/14/22 06:11:18 
-obukowski stoppped zonda_trades.py on 03/14/22 06:11:18 
-obukowski started zonda_ob.py on 03/14/22 06:11:18 
-obukowski started zonda_trades.py on 03/14/22 06:11:18 
-obukowski stoppped zonda_ob.py
-obukowski started zonda_ob.py on 03/14/22 06:16:55 
-obukowski stoppped zonda_ob.py on 03/14/22 06:18:19 
-obukowski stoppped zonda_trades.py on 03/14/22 06:18:19 
-obukowski started zonda_ob.py on 03/14/22 06:18:19 
-obukowski stoppped zonda_ob.py on 03/14/22 06:20:36 
-obukowski stoppped zonda_trades.py on 03/14/22 06:20:36 
-obukowski started zonda_ob.py on 03/14/22 06:20:36 
-obukowski started zonda_trades.py on 03/14/22 06:20:36 
-obukowski stoppped zonda_ob.py on 03/14/22 06:20:53 
-obukowski stoppped zonda_trades.py on 03/14/22 06:20:53 
-obukowski started zonda_ob.py on 03/14/22 06:20:53 
-obukowski started zonda_trades.py on 03/14/22 06:20:53 
-obukowski stoppped zonda_ob.py on 03/14/22 06:21:57 
-obukowski stoppped zonda_trades.py on 03/14/22 06:21:57 
-obukowski started zonda_ob.py on 03/14/22 06:21:57 
-obukowski started zonda_trades.py on 03/14/22 06:21:57 
-obukowski stoppped .py on 03/14/22 06:26:03 
-obukowski stoppped .py on 03/14/22 06:26:03 
-obukowski started .py on 03/14/22 06:26:03 
-obukowski started .py on 03/14/22 06:26:03 
-obukowski stoppped zonda_ob.py on 03/14/22 06:28:15 
-obukowski stoppped zonda_trades.py on 03/14/22 06:28:15 
-obukowski started zonda_ob.py on 03/14/22 06:28:15 
-obukowski started zonda_trades.py on 03/14/22 06:28:15 
-obukowski stoppped zonda_ob.py on 03/14/22 06:28:44 
-obukowski stoppped zonda_trades.py on 03/14/22 06:28:44 
-obukowski started zonda_ob.py on 03/14/22 06:28:44 
-obukowski started zonda_trades.py on 03/14/22 06:28:44 
-obukowski stoppped zonda_ob.py on 03/14/22 06:30:49 
-obukowski stoppped zonda_trades.py on 03/14/22 06:30:49 
-obukowski started zonda_ob.py on 03/14/22 06:30:49 
-obukowski started zonda_trades.py on 03/14/22 06:30:49 
-obukowski stoppped zonda_ob.py on 03/14/22 06:31:19 
-obukowski stoppped zonda_trades.py on 03/14/22 06:31:19 
-obukowski started zonda_ob.py on 03/14/22 06:31:19 
-obukowski started zonda_trades.py on 03/14/22 06:31:19 
-obukowski stoppped zonda_ob.py on 03/14/22 06:33:23 
-obukowski stoppped zonda_trades.py on 03/14/22 06:33:23 
-obukowski started zonda_ob.py on 03/14/22 06:33:23 
-obukowski started zonda_trades.py on 03/14/22 06:33:23 
-obukowski stoppped zonda_ob.py on 03/14/22 06:34:21 
-obukowski stoppped zonda_trades.py on 03/14/22 06:34:21 
-obukowski started zonda_ob.py on 03/14/22 06:34:21 
-obukowski started zonda_trades.py on 03/14/22 06:34:21 
-obukowski stoppped zonda_ob.py on 03/14/22 06:34:59 
-obukowski stoppped zonda_trades.py on 03/14/22 06:34:59 
-obukowski started zonda_ob.py on 03/14/22 06:34:59 
-obukowski started zonda_trades.py on 03/14/22 06:34:59 
-obukowski stoppped zonda_ob.py on 03/14/22 06:35:25 
-obukowski stoppped zonda_trades.py on 03/14/22 06:35:26 
-obukowski started zonda_ob.py on 03/14/22 06:35:26 
-obukowski started zonda_trades.py on 03/14/22 06:35:26 
-obukowski stoppped zonda_ob.py on 03/14/22 06:37:50 
-obukowski stoppped zonda_trades.py on 03/14/22 06:37:50 
-obukowski started zonda_ob.py on 03/14/22 06:37:50 
-obukowski started zonda_trades.py on 03/14/22 06:37:50 
-obukowski stoppped zonda_ob.py on 03/14/22 06:38:10 
-obukowski stoppped zonda_trades.py on 03/14/22 06:38:10 
-obukowski started zonda_ob.py on 03/14/22 06:38:10 
-obukowski started zonda_trades.py on 03/14/22 06:38:10 
-obukowski stoppped zonda_ob.py on 03/14/22 06:39:29 
-obukowski stoppped zonda_trades.py on 03/14/22 06:39:29 
-obukowski started zonda_ob.py on 03/14/22 06:39:29 
-obukowski started zonda_trades.py on 03/14/22 06:39:29 
-obukowski stoppped zonda_ob.py on 03/14/22 06:40:19 
-obukowski stoppped zonda_trades.py on 03/14/22 06:40:19 
-obukowski started zonda_ob.py on 03/14/22 06:40:19 
-obukowski started zonda_trades.py on 03/14/22 06:40:19 
-obukowski stoppped zonda_ob.py on 03/14/22 06:41:18 
-obukowski stoppped zonda_trades.py on 03/14/22 06:41:18 
-obukowski started zonda_ob.py on 03/14/22 06:41:18 
-obukowski started zonda_trades.py on 03/14/22 06:41:18 
-obukowski stoppped zonda_ob.py on 03/14/22 06:43:16 
-obukowski stoppped zonda_trades.py on 03/14/22 06:43:16 
-obukowski started zonda_ob.py on 03/14/22 06:43:16 
-obukowski started zonda_trades.py on 03/14/22 06:43:16 
-obukowski stoppped zonda_ob.py on 03/14/22 06:45:07 
-obukowski stoppped zonda_trades.py on 03/14/22 06:45:07 
-obukowski started zonda_ob.py on 03/14/22 06:45:07 
-obukowski started zonda_trades.py on 03/14/22 06:45:07 
-obukowski stoppped zonda_ob.py on 03/14/22 06:45:24 
-obukowski stoppped zonda_trades.py on 03/14/22 06:45:24 
-obukowski started zonda_ob.py on 03/14/22 06:45:24 
-obukowski started zonda_trades.py on 03/14/22 06:45:24 
-obukowski stoppped zonda_ob.py on 03/14/22 06:46:11 
-obukowski stoppped zonda_trades.py on 03/14/22 06:46:11 
-obukowski started zonda_ob.py on 03/14/22 06:46:11 
-obukowski started zonda_trades.py on 03/14/22 06:46:11 
-obukowski stoppped zonda_ob.py on 03/14/22 06:46:34 
-obukowski stoppped zonda_trades.py on 03/14/22 06:46:34 
-obukowski started zonda_ob.py on 03/14/22 06:46:34 
-obukowski started zonda_trades.py on 03/14/22 06:46:34 
-obukowski stoppped zonda_ob.py on 03/14/22 06:47:12 
-obukowski stoppped zonda_trades.py on 03/14/22 06:47:12 
-obukowski started zonda_ob.py on 03/14/22 06:47:12 
-obukowski started zonda_trades.py on 03/14/22 06:47:12 
-obukowski stoppped zonda_ob.py on 03/14/22 06:47:28 
-obukowski stoppped zonda_trades.py on 03/14/22 06:47:28 
-obukowski started zonda_ob.py on 03/14/22 06:47:28 
-obukowski started zonda_trades.py on 03/14/22 06:47:28 
-obukowski stoppped zonda_ob.py on 03/14/22 06:48:57 
-obukowski stoppped zonda_trades.py on 03/14/22 06:48:57 
-obukowski started zonda_ob.py on 03/14/22 06:48:57 
-obukowski started zonda_trades.py on 03/14/22 06:48:57 
-obukowski stoppped zonda_ob.py on 03/14/22 06:51:02 
-obukowski stoppped zonda_trades.py on 03/14/22 06:51:02 
-obukowski started zonda_ob.py on 03/14/22 06:51:02 
-obukowski started zonda_trades.py on 03/14/22 06:51:02 
-obukowski stoppped zonda_ob.py on 03/14/22 06:52:18 
-obukowski stoppped zonda_trades.py on 03/14/22 06:52:18 
-obukowski started zonda_ob.py on 03/14/22 06:52:18 
-obukowski started zonda_trades.py on 03/14/22 06:52:18 
-obukowski stoppped zonda_ob.py on 03/14/22 06:52:57 
-obukowski stoppped zonda_trades.py on 03/14/22 06:52:57 
-obukowski started zonda_ob.py on 03/14/22 06:52:57 
-obukowski started zonda_trades.py on 03/14/22 06:52:57 
-obukowski stoppped zonda_ob.py on 03/14/22 06:54:49 
-obukowski stoppped zonda_trades.py on 03/14/22 06:54:49 
-obukowski started zonda_ob.py on 03/14/22 06:54:49 
-obukowski started zonda_trades.py on 03/14/22 06:54:49 
-obukowski stoppped zonda_ob.py on 03/14/22 06:55:03 
-obukowski stoppped zonda_trades.py on 03/14/22 06:55:03 
-obukowski started zonda_ob.py on 03/14/22 06:55:03 
-obukowski started zonda_trades.py on 03/14/22 06:55:03 
-obukowski stoppped zonda_ob.py on 03/14/22 06:57:38 
-obukowski stoppped zonda_trades.py on 03/14/22 06:57:38 
-obukowski started zonda_ob.py on 03/14/22 06:57:38 
-obukowski started zonda_trades.py on 03/14/22 06:57:38 
-obukowski stoppped zonda_ob.py on 03/14/22 06:58:00 
-obukowski stoppped zonda_trades.py on 03/14/22 06:58:00 
-obukowski started zonda_ob.py on 03/14/22 06:58:00 
-obukowski started zonda_trades.py on 03/14/22 06:58:00 
-obukowski stoppped zonda_ob.py on 03/14/22 06:58:25 
-obukowski stoppped zonda_trades.py on 03/14/22 06:58:25 
-obukowski started zonda_ob.py on 03/14/22 06:58:25 
-obukowski started zonda_trades.py on 03/14/22 06:58:25 
-obukowski stoppped zonda_ob.py on 03/14/22 06:58:45 
-obukowski stoppped zonda_trades.py on 03/14/22 06:58:45 
-obukowski started zonda_ob.py on 03/14/22 06:58:45 
-obukowski started zonda_trades.py on 03/14/22 06:58:45 
-obukowski stoppped zonda_ob.py on 03/14/22 07:13:02 
-obukowski stoppped zonda_trades.py on 03/14/22 07:13:08 
+obukowski started zonda_ob.py on 02/21/22 06:16:02 
+obukowski started zonda_trades.py on 02/21/22 06:16:06 
+obukowski started zonda_ob.py on 03/09/22 21:29:19 
+obukowski started zonda_trades.py on 03/09/22 21:29:27 
+obukowski stoppped zonda_ob.py on 03/10/22 05:55:56 
+obukowski stoppped zonda_trades.py on 03/10/22 05:56:02 
+obukowski started zonda_trades.py on 03/10/22 05:56:08 
+obukowski started zonda_ob.py on 03/10/22 05:56:14 
+obukowski stoppped zonda_ob.py on 03/13/22 07:58:34 
+obukowski stoppped zonda_trades.py on 03/13/22 07:58:40 
+obukowski started zonda_trades.py on 03/13/22 07:59:12 
+obukowski started zonda_ob.py on 03/13/22 07:59:18 
+obukowski stoppped  on 04/04/22 08:24:49 
+obukowski stoppped zonda_ob.py on 04/04/22 08:24:54 
+obukowski stoppped zonda_trades.py on 04/04/22 08:25:00 
