--- a/db_ex_connections/history.txt
+++ b/db_ex_connections/history.txt
@@ -76,3 +76,73 @@ root started wazirx_ob.py on 04/09/22 14:14:11
 root started wazirx_ob.py on 04/09/22 14:14:11 
 root started zonda_ob.py on 04/09/22 14:14:11 
 root started zonda_ob.py on 04/09/22 14:14:11 
+obukowski started huobi_ob.py on 04/10/22 08:47:35 
+obukowski started huobi_trades.py on 04/10/22 08:47:35 
+obukowski started bitkub_ob.py on 04/10/22 08:47:35 
+obukowski started bitkub_trades.py on 04/10/22 08:47:35 
+obukowski started bitso_ob.py on 04/10/22 08:47:35 
+obukowski started bitso_trades.py on 04/10/22 08:47:35 
+obukowski started wazirx_trades.py on 04/10/22 08:47:35 
+obukowski started wazirx_ob.py on 04/10/22 08:47:35 
+obukowski started bitfinex_ob.py on 04/10/22 08:47:35 
+obukowski started bitfinex_trades.py on 04/10/22 08:47:35 
+obukowski started gemini_trades.py on 04/10/22 08:47:35 
+obukowski started gemini_ob.py on 04/10/22 08:47:35 
+obukowski started zonda_ob.py on 04/10/22 08:47:35 
+obukowski started zonda_trades.py on 04/10/22 08:47:35 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 08:48:07 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 08:48:07 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 08:49:08 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 08:51:33 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 08:51:33 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 08:51:39 
