--- a/db_ex_connections/history.txt
+++ b/db_ex_connections/history.txt
@@ -146,3 +146,141 @@ obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemi
 obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 08:51:39 
 obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 08:51:39 
 obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 08:51:39 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 09:35:59 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:38:30 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:38:31 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:39:17 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:39:17 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 09:46:05 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 09:46:05 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 09:46:19 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 09:46:19 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 09:46:19 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 09:46:19 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:46:19 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 09:46:20 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 09:57:39 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 09:57:40 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 09:57:40 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 09:57:45 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/huobi_ob.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/huobi_trades.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitkub_ob.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitkub_trades.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/wazirx_trades.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/wazirx_ob.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitfinex_ob.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitfinex_trades.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/gemini_trades.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/gemini_ob.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/zonda_ob.py on 04/10/22 09:57:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/zonda_trades.py on 04/10/22 09:57:50 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/huobi_ob.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/huobi_trades.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitkub_ob.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitkub_trades.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/wazirx_trades.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/wazirx_ob.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitfinex_ob.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitfinex_trades.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/gemini_trades.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/gemini_ob.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/zonda_ob.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/zonda_trades.py on 04/10/22 09:58:09 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 10:02:19 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 10:02:19 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 10:02:24 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 10:02:24 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 10:02:29 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 10:02:29 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_ob.py on 04/10/22 10:02:40 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/huobi/huobi_trades.py on 04/10/22 10:02:40 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_ob.py on 04/10/22 10:02:40 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitkub/bitkub_trades.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_ob.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitso/bitso_trades.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_trades.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/wazirx/wazirx_ob.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_ob.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/bitfinex/bitfinex_trades.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_trades.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/gemini/gemini_ob.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 10:02:41 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 10:02:50 
+obukowski stoppped /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 10:02:50 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_ob.py on 04/10/22 10:02:55 
+obukowski started /home/obukowski/Desktop/hft_algo/db_ex_connections/zonda/zonda_trades.py on 04/10/22 10:02:55 
