--- a/db_ex_connections/bitkub/history.txt
+++ b/db_ex_connections/bitkub/history.txt
@@ -8,3 +8,33 @@ obukowski started bitkub_trades.py on 03/10/22 05:57:39
 obukowski started bitkub_ob.py on 03/10/22 05:57:45 
 obukowski stoppped bitkub_ob.py on 04/04/22 08:25:32 
 obukowski stoppped bitkub_trades.py on 04/04/22 08:25:37 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:45:08 
+obukowski stoppped  on 04/25/22 05:45:08 
+obukowski stoppped  on 04/25/22 05:45:44 
+obukowski stoppped  on 04/25/22 05:45:44 
+obukowski stoppped  on 04/25/22 05:46:18 
+obukowski stoppped  on 04/25/22 05:46:18 
+obukowski stoppped  on 04/25/22 05:46:38 
+obukowski stoppped  on 04/25/22 05:46:38 
+obukowski stoppped  on 04/25/22 05:47:14 
+obukowski stoppped  on 04/25/22 05:47:14 
+obukowski stoppped  on 04/25/22 05:52:02 
+obukowski stoppped  on 04/25/22 05:52:02 
+obukowski stoppped  on 04/25/22 05:52:27 
+obukowski stoppped  on 04/25/22 05:52:27 
+obukowski stoppped  on 04/25/22 05:53:48 
+obukowski stoppped  on 04/25/22 05:53:48 
+obukowski stoppped ./bitkub_ob.py on 04/25/22 05:55:48 
+obukowski stoppped ./bitkub_trades.py on 04/25/22 05:55:48 
