--- a/db_ex_connections/bitso/history.txt
+++ b/db_ex_connections/bitso/history.txt
@@ -18,3 +18,34 @@ obukowski started bitso_trades.py on 03/14/22 07:17:01
 obukowski stoppped bitso_ob.py on 04/04/22 08:25:08 
 obukowski started  on 04/10/22 08:20:46 
 obukowski started bitso_ob.py on 04/10/22 08:21:09 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:45:08 
+obukowski stoppped  on 04/25/22 05:45:08 
+obukowski stoppped  on 04/25/22 05:45:44 
+obukowski stoppped  on 04/25/22 05:45:44 
+obukowski stoppped  on 04/25/22 05:46:18 
+obukowski stoppped  on 04/25/22 05:46:18 
+obukowski stoppped  on 04/25/22 05:46:38 
+obukowski stoppped  on 04/25/22 05:46:38 
+obukowski stoppped  on 04/25/22 05:47:14 
+obukowski stoppped  on 04/25/22 05:47:14 
+obukowski stoppped  on 04/25/22 05:52:02 
+obukowski stoppped  on 04/25/22 05:52:02 
+obukowski stoppped  on 04/25/22 05:52:27 
+obukowski stoppped  on 04/25/22 05:52:27 
+obukowski stoppped  on 04/25/22 05:53:48 
+obukowski stoppped  on 04/25/22 05:53:48 
+obukowski stoppped ./bitso_ob.py on 04/25/22 05:54:45 
+obukowski stoppped ./bitso_ob.py on 04/25/22 05:55:48 
+obukowski stoppped ./bitso_trades.py on 04/25/22 05:55:48 
