--- a/db_ex_connections/gemini/history.txt
+++ b/db_ex_connections/gemini/history.txt
@@ -15,3 +15,33 @@ obukowski started gemin_ob.py on 03/13/22 07:57:54
 obukowski started gemini_ob.py on 03/13/22 07:57:58 
 obukowski stoppped gemini_ob.py on 04/04/22 08:25:21 
 obukowski stoppped gemini_trades.py on 04/04/22 08:25:24 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:45:08 
+obukowski stoppped  on 04/25/22 05:45:08 
+obukowski stoppped  on 04/25/22 05:45:44 
+obukowski stoppped  on 04/25/22 05:45:44 
+obukowski stoppped  on 04/25/22 05:46:18 
+obukowski stoppped  on 04/25/22 05:46:18 
+obukowski stoppped  on 04/25/22 05:46:38 
+obukowski stoppped  on 04/25/22 05:46:38 
+obukowski stoppped  on 04/25/22 05:47:14 
+obukowski stoppped  on 04/25/22 05:47:14 
+obukowski stoppped  on 04/25/22 05:52:02 
+obukowski stoppped  on 04/25/22 05:52:02 
+obukowski stoppped  on 04/25/22 05:52:27 
+obukowski stoppped  on 04/25/22 05:52:27 
+obukowski stoppped  on 04/25/22 05:53:48 
+obukowski stoppped  on 04/25/22 05:53:48 
+obukowski stoppped ./gemini_trades.py on 04/25/22 05:55:48 
+obukowski stoppped ./gemini_ob.py on 04/25/22 05:55:48 
