--- a/db_ex_connections/zonda/history.txt
+++ b/db_ex_connections/zonda/history.txt
@@ -20,3 +20,33 @@ obukowski stoppped zonda_trades.py on 04/10/22 08:29:32
 obukowski started zonda_trades.py on 04/10/22 08:29:37 
 obukowski started zonda_ob.py on 04/10/22 08:33:24 
 obukowski started zonda_ob.py on 04/10/22 08:45:41 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:40:03 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:41:50 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:26 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:42:56 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:42 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:43:59 
+obukowski stoppped  on 04/25/22 05:45:09 
+obukowski stoppped  on 04/25/22 05:45:09 
+obukowski stoppped  on 04/25/22 05:45:44 
+obukowski stoppped  on 04/25/22 05:45:45 
+obukowski stoppped  on 04/25/22 05:46:19 
+obukowski stoppped  on 04/25/22 05:46:19 
+obukowski stoppped  on 04/25/22 05:46:39 
+obukowski stoppped  on 04/25/22 05:46:39 
+obukowski stoppped  on 04/25/22 05:47:14 
+obukowski stoppped  on 04/25/22 05:47:15 
+obukowski stoppped  on 04/25/22 05:52:02 
+obukowski stoppped  on 04/25/22 05:52:03 
+obukowski stoppped  on 04/25/22 05:52:28 
+obukowski stoppped  on 04/25/22 05:52:28 
+obukowski stoppped  on 04/25/22 05:53:48 
+obukowski stoppped  on 04/25/22 05:53:49 
+obukowski stoppped ./zonda_ob.py on 04/25/22 05:55:48 
+obukowski stoppped ./zonda_trades.py on 04/25/22 05:55:48 
