--- a/db_ex_connections/bitfinex/history.txt
+++ b/db_ex_connections/bitfinex/history.txt
@@ -63,3 +63,7 @@ obukowski stoppped  on 04/25/22 05:53:48
 obukowski stoppped  on 04/25/22 05:53:48 
 obukowski stoppped ./bitfinex_ob.py on 04/25/22 05:55:48 
 obukowski stoppped ./bitfinex_trades.py on 04/25/22 05:55:48 
+obukowski started ./bitfinex_ob.py on 04/25/22 06:20:42 
+obukowski started ./bitfinex_trades.py on 04/25/22 06:20:42 
+obukowski started ./bitfinex_ob.py on 04/25/22 06:21:52 
+obukowski started ./bitfinex_trades.py on 04/25/22 06:21:52 
