--- a/db_ex_connections/zonda/history.txt
+++ b/db_ex_connections/zonda/history.txt
@@ -50,3 +50,7 @@ obukowski stoppped  on 04/25/22 05:53:48
 obukowski stoppped  on 04/25/22 05:53:49 
 obukowski stoppped ./zonda_ob.py on 04/25/22 05:55:48 
 obukowski stoppped ./zonda_trades.py on 04/25/22 05:55:48 
+obukowski started ./zonda_ob.py on 04/25/22 06:20:42 
+obukowski started ./zonda_trades.py on 04/25/22 06:20:42 
+obukowski started ./zonda_ob.py on 04/25/22 06:21:52 
+obukowski started ./zonda_trades.py on 04/25/22 06:21:52 
