--- a/db_ex_connections/bitkub/history.txt
+++ b/db_ex_connections/bitkub/history.txt
@@ -38,3 +38,7 @@ obukowski stoppped  on 04/25/22 05:53:48
 obukowski stoppped  on 04/25/22 05:53:48 
 obukowski stoppped ./bitkub_ob.py on 04/25/22 05:55:48 
 obukowski stoppped ./bitkub_trades.py on 04/25/22 05:55:48 
+obukowski started ./bitkub_ob.py on 04/25/22 06:20:42 
+obukowski started ./bitkub_trades.py on 04/25/22 06:20:42 
+obukowski started ./bitkub_ob.py on 04/25/22 06:21:52 
+obukowski started ./bitkub_trades.py on 04/25/22 06:21:52 
