--- a/db_ex_connections/wazirx/history.txt
+++ b/db_ex_connections/wazirx/history.txt
@@ -41,3 +41,7 @@ obukowski stoppped  on 04/25/22 05:53:48
 obukowski stoppped  on 04/25/22 05:53:48 
 obukowski stoppped ./wazirx_trades.py on 04/25/22 05:55:48 
 obukowski stoppped ./wazirx_ob.py on 04/25/22 05:55:48 
+obukowski started ./wazirx_trades.py on 04/25/22 06:20:42 
+obukowski started ./wazirx_ob.py on 04/25/22 06:20:42 
+obukowski started ./wazirx_trades.py on 04/25/22 06:21:52 
+obukowski started ./wazirx_ob.py on 04/25/22 06:21:52 
